--- a/src/layouts/MainHead.astro
+++ b/src/layouts/MainHead.astro
@@ -10,6 +10,7 @@ const API = import.meta.env.REACT_APP_GOOGLE_MAPS_API_KEY;
   <meta charset="UTF-8" />
   <meta name="description" content="Astro description" />
   <meta name="viewport" content="width=device-width" />
+<meta name="google-adsense-account" content="ca-pub-1581715996701650">
   <link rel="icon" type="image/svg+xml" href="/images/logo.svg" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
