--- a/src/layouts/MainHead.astro
+++ b/src/layouts/MainHead.astro
@@ -7,6 +7,12 @@ const API = import.meta.env.REACT_APP_GOOGLE_MAPS_API_KEY;
   <script is:inline
     src={`https://maps.googleapis.com/maps/api/js?key=${API}&libraries=places`}
   ></script>
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-WL4KFCTT');
+</script>
   <meta charset="UTF-8" />
   <meta name="description" content="Astro description" />
   <meta name="viewport" content="width=device-width" />
