video section added. payment and soical media links added

--- a/src/components/StoreButtons.astro
+++ b/src/components/StoreButtons.astro
@@ -5,7 +5,7 @@ const { title_1, title_2, title_3, description, image, phone } = Astro.props;
 
 
 <div
-  class="relative container px-5 lg:w-[1340px] flex flex-col lg:flex-row mx-auto z-0 mb-10 footer-image bg-primary bg-cover bg-center bg-overlay rounded-3xl"
+  class="relative container px-5 lg:w-[1340px] flex flex-col lg:flex-row mx-auto z-0 mb-10 footer-overlay bg-primary bg-cover bg-center bg-overlay rounded-3xl"
 >
   <div class="py-20 px-5 lg:px-20">
     <h1
