--- a/public/Styles/global.css
+++ b/public/Styles/global.css
@@ -45,3 +45,16 @@
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+.footer-overlay::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position:center;
+  background-image: url("https://veloxy.care/images/footer/bgImage.png");
+  z-index: 0;
+  opacity: 0.03;
+}
