--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 import { createReader } from '@keystatic/core/reader'
 import keystaticConfig from '../../keystatic.config'
 const reader = createReader(process.cwd(), keystaticConfig)
-const footer = await reader.singletons.footer.read()
+const footer = await reader.singletons.footer.read()  
 ---
 
 <style>
@@ -22,7 +22,7 @@ const footer = await reader.singletons.footer.read()
 </style>
 
 <footer 
-  class="relative container mx-auto py-20 px-16  footer-image bg-primary bg-cover bg-center bg-overlay rounded-3xl "
+  class="relative container mx-auto py-20 px-16  footer-overlay bg-primary bg-cover bg-center bg-overlay rounded-3xl "
   style={`background-image: url(${footer?.bgImage}), z-index: 0`}
 >
   <div class="relative container mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-10 z-10">
@@ -78,11 +78,27 @@ const footer = await reader.singletons.footer.read()
       <h3 class="text-white font-bold">{footer?.EmailDetails.Email}</h3>
     </div>
     <div class=" justify-center ">
-      <span class="icon-background"><i class="fa-brands fa-xl fa-facebook"></i></span>
-      <span class="icon-background"><i class="fa-brands fa-xl fa-instagram"></i></span>
-      <span class="icon-background"><i class="fa-brands fa-xl fa-twitter"></i></span>
-      <span class="icon-background"><i class="fa-brands fa-xl fa-youtube"></i></span>
-      <span class="icon-background"><i class="fa-brands fa-xl fa-reddit-alien"></i></span>
+      <span class="icon-background"><a href="https://www.facebook.com/veloxycareride"><i  class="fa-brands fa-xl fa-facebook"></i></a></span>
+      <span class="icon-background"><a href="https://www.instagram.com/veloxycareride?igsh=MWhmMXBkcHo1eXRoNg%3D%3D&utm_source=qr"><i class="fa-brands fa-xl fa-instagram"></i></a></span>
+      <span class="icon-background"><a href="https://www.twitter.com/veloxycareride"><i class="fa-brands fa-xl fa-twitter"></i></a></span>
+      <span class="icon-background"><a href="https://www.instagram.com/veloxycareride?igsh=MWhmMXBkcHo1eXRoNg%3D%3D&utm_source=qr"><i class="fa-brands fa-xl fa-youtube"></i></a></span>
+      <span class="icon-background"><a href="https://www.reddit.com/u/veloxycareride/s/vr9aCpcfCM"><i class="fa-brands fa-xl fa-reddit-alien"></i></a></span>
     </div>
   </div>
+
+  <div class="relative container flex flex-col lg:flex-row items-center justify-center lg:justify-between mx-auto mt-8 pt-4 z-10 text-center">
+    <div class=" mb-4 lg:mb-0">
+      <!-- <i class="fa-solid fa-xl fa-location-dot" style="color: #FFB703;"></i> -->
+      <h3 class="text-white font-semibold">© VELOXY LLC 2024 All rights reserved.</h3>
+    </div>
+    <div class=" mb-4 lg:mb-0">
+      <p class="text-white text-left text-md font-bold mb-2" >Secure payments</p>
+      <div class="flex items-center justify-center" >
+        <img src="../../public/images/footer/payment.png" width="300px" alt="">
+
+      </div>
+    </div>
+
+  </div>
+
 </footer>
