--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Features from '../components/Features.astro';
 import * as data from "../data/StoreButtons.md";
 import * as learnmore from "../data/Learnmore.md";
 const learnmoreHero = learnmore.frontmatter.learnmorehero;
-
+import Videoplayer from "../components/Videoplayer"
 
 const {title, description:description_2, features, contactNumber, image:image_2} = learnmoreHero
 const {title_1, title_2, title_3, description, image, phone } = data.frontmatter.storeButtonsHome;
@@ -18,6 +18,7 @@ const {title_1, title_2, title_3, description, image, phone } = data.frontmatter
 <Layout title="Home " description ="Home page" currentPath="/" >
   
    <Hero/>
+   <Videoplayer client:visible />
    <StoreButtons {title_1} {title_2} {title_3} {description} {image} {phone} />
    <LearnMore {title} {description_2} {features} {contactNumber} {image_2} />
    <Services/>
