--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -77,7 +77,7 @@ const footer = await reader.singletons.footer.read()
       <i class="fa-solid fa-xl fa-envelope-open-text" style="color: #FFB703;"></i>
       <h3 class="text-white font-bold">{footer?.EmailDetails.Email}</h3>
     </div>
-    <div class=" justify-center ">
+    <div class="grid grid-flow-col items-center justify-center">
       <span class="icon-background"><a href="https://www.facebook.com/veloxycareride"><i  class="fa-brands fa-xl fa-facebook"></i></a></span>
       <span class="icon-background"><a href="https://www.instagram.com/veloxycareride?igsh=MWhmMXBkcHo1eXRoNg%3D%3D&utm_source=qr"><i class="fa-brands fa-xl fa-instagram"></i></a></span>
       <span class="icon-background"><a href="https://www.twitter.com/veloxycareride"><i class="fa-brands fa-xl fa-twitter"></i></a></span>
@@ -92,9 +92,9 @@ const footer = await reader.singletons.footer.read()
       <h3 class="text-white font-semibold">© VELOXY LLC 2024 All rights reserved.</h3>
     </div>
     <div class=" mb-4 lg:mb-0">
-      <p class="text-white text-left text-md font-bold mb-2" >Secure payments</p>
+      <p class="text-white text-center lg:text-left text-md font-bold mb-2" >Secure payments</p>
       <div class="flex items-center justify-center" >
-        <img src="../../public/images/footer/payment.png" width="300px" alt="">
+        <img src="https://veloxy.care/images/footer/payment.png" width="300px" alt="">
 
       </div>
     </div>
