--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -81,14 +81,13 @@ const footer = await reader.singletons.footer.read()
       <span class="icon-background"><a href="https://www.facebook.com/veloxycareride"><i  class="fa-brands fa-xl fa-facebook"></i></a></span>
       <span class="icon-background"><a href="https://www.instagram.com/veloxycareride?igsh=MWhmMXBkcHo1eXRoNg%3D%3D&utm_source=qr"><i class="fa-brands fa-xl fa-instagram"></i></a></span>
       <span class="icon-background"><a href="https://www.twitter.com/veloxycareride"><i class="fa-brands fa-xl fa-twitter"></i></a></span>
-      <span class="icon-background"><a href="https://www.instagram.com/veloxycareride?igsh=MWhmMXBkcHo1eXRoNg%3D%3D&utm_source=qr"><i class="fa-brands fa-xl fa-youtube"></i></a></span>
+      <span class="icon-background"><a href="https://youtube.com/@veloxycareride?si=_TpMqN2iVLkxjDv8"><i class="fa-brands fa-xl fa-youtube"></i></a></span>
       <span class="icon-background"><a href="https://www.reddit.com/u/veloxycareride/s/vr9aCpcfCM"><i class="fa-brands fa-xl fa-reddit-alien"></i></a></span>
     </div>
   </div>
 
   <div class="relative container flex flex-col lg:flex-row items-center justify-center lg:justify-between mx-auto mt-8 pt-4 z-10 text-center">
     <div class=" mb-4 lg:mb-0">
-      <!-- <i class="fa-solid fa-xl fa-location-dot" style="color: #FFB703;"></i> -->
       <h3 class="text-white font-semibold">© VELOXY LLC 2024 All rights reserved.</h3>
     </div>
     <div class=" mb-4 lg:mb-0">
