--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -88,7 +88,7 @@ const footer = await reader.singletons.footer.read()
 
   <div class="relative container flex flex-col lg:flex-row items-center justify-center lg:justify-between mx-auto mt-8 pt-4 z-10 text-center">
     <div class=" mb-4 lg:mb-0">
-      <h3 class="text-white font-semibold">© VELOXY LLC 2024 All rights reserved.</h3>
+      <h3 class="text-white font-semibold">© VELOXY CARERIDE INC. 2024 All rights reserved.</h3>
     </div>
     <div class=" mb-4 lg:mb-0">
       <p class="text-white text-center lg:text-left text-md font-bold mb-2" >Secure payments</p>
