--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -91,7 +91,7 @@ const footer = await reader.singletons.footer.read()
       <h3 class="text-white font-semibold">© VELOXY CARERIDE INC. 2024 All rights reserved.</h3>
     </div>
     <div class=" mb-4 lg:mb-0">
-      <p class="text-white text-center lg:text-left text-md font-bold mb-2" >Secure payments</p>
+      <p class="text-white text-center lg:text-left text-md font-bold mb-2" >Secure Payments</p>
       <div class="flex items-center justify-center" >
         <img src="https://veloxy.care/images/footer/payment.png" width="300px" alt="">
 
