--- a/src/layouts/MainHead.astro
+++ b/src/layouts/MainHead.astro
@@ -17,7 +17,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <meta name="description" content="Astro description" />
   <meta name="viewport" content="width=device-width" />
 <meta name="google-adsense-account" content="ca-pub-1581715996701650">
-  <link rel="icon" type="image/svg+xml" href="/images/logo.svg" />
+  <link rel="icon" type="image/svg+xml" href="/images/veloxy-logo.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
