--- a/src/layouts/MainHead.astro
+++ b/src/layouts/MainHead.astro
@@ -4,6 +4,10 @@ const API = import.meta.env.REACT_APP_GOOGLE_MAPS_API_KEY;
 ---
 
 <head>
+<script
+  type="text/javascript"
+  src="https://app.termly.io/resource-blocker/a31f68e2-c2c9-4b26-8c50-f75280c45c95?autoBlock=on"
+></script>
   <script is:inline
     src={`https://maps.googleapis.com/maps/api/js?key=${API}&libraries=places`}
   ></script>
