--- a/src/layouts/MainHead.astro
+++ b/src/layouts/MainHead.astro
@@ -4,6 +4,7 @@ const API = import.meta.env.REACT_APP_GOOGLE_MAPS_API_KEY;
 ---
 
 <head>
+<meta name="google-site-verification" content="mO7uLputbNeCWVFmCNyfmeFK7Kcy1cXeevXdwLzLtVI" />
 <meta name="monetag" content="09fd897e9663bb49e7c6b9894783b706">
 <script
   type="text/javascript"
