changes at driver page

--- a/src/pages/driver.astro
+++ b/src/pages/driver.astro
@@ -1,20 +1,34 @@
 ---
-import LearnMore from '../components/LearnMore.astro';
-import StoreButtons from '../components/StoreButtons.astro';
-import Layout from '../layouts/Layout.astro';
+import LearnMore from "../components/LearnMore.astro";
+import StoreButtons from "../components/StoreButtons.astro";
+import Layout from "../layouts/Layout.astro";
 import * as data from "../data/StoreButtons.md";
 import * as learnmore from "../data/Learnmore.md";
-import Whyus from '../components/driver/Whyus.astro';
+import Whyus from "../components/driver/Whyus.astro";
 const learnmoreHero = learnmore.frontmatter.learnmoreDriver;
 
-
-const {title, description:description_2, features, image:image_2} = learnmoreHero
-const {title_1, title_2, title_3, description, image, phone } = data.frontmatter.storeButtonsDriver;
+const {
+  title,
+  description: description_2,
+  features,
+  image: image_2,
+} = learnmoreHero;
+const { title_1, title_2, title_3, description, image, phone, google } =
+  data.frontmatter.storeButtonsDriver;
 ---
 
-<Layout title="Driver" desc="Driver" currentPath="/driver"  >
-    <StoreButtons {title_1} {title_2} {title_3} {description} {image} {phone}  />
-    <LearnMore {title} {description_2} {features}  {image_2}  />
-    <Whyus/>
+<Layout title="Driver" desc="Driver" currentPath="/driver">
+  <StoreButtons
+    {title_1}
+    {title_2}
+    {title_3}
+    {description}
+    {image}
+    {phone}
+    {google}
+    ,
+  />
+  <LearnMore {title} {description_2} {features} {image_2} />
+  <Whyus />
+</Layout>
 
-</Layout>   
