--- a/src/pages/how-it-works.astro
+++ b/src/pages/how-it-works.astro
@@ -14,7 +14,7 @@ const features: any =[];
 const howitworkshero = {
   title1: "How it",
   title2: "Works",
-  desc: "Download the Veloxy CareRide Mobile app for Driver or Passenger on Apple and Google or contact our support for more info.support@veloxy.care",
+  desc: "Download the Veloxy CareRide Mobile app for Driver or Passenger on Apple and Google or contact our support for more info.support@veloxycareride.com",
 };
 ---
 
